learned the symptax of react

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "emmet.includeLanguages": {
        "javascript": "javascriptreact"
    },
-   "emmet.extensionsPath": ""
+"emmet.extensionsPath": "",
+"html.format.contentUnformatted": ""
 }
